# brefabs

./: Cargo.toml  README.md
assets/prefabs/: singleton.ron
assets/prefabs/many/: example1.ron  example2.ron  example3.ron
examples/: simple.rs
src/: lib.rs  private.rs
src/private/: systems.rs  util.rs
