[package]
name = "brefabs"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
publish = false

[dependencies]
bevy_app = "0.17.3"
bevy_asset = "0.17.3"
bevy_ecs = "0.17.3"
bevy_log = "0.17.3"
bevy_platform = "0.17.3"
bevy_reflect = "0.17.3"
bevy_utils = "0.17.3"
derive_more = "2.0.1"
ron = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
