[package]
name = "brefabs"
version = "0.3.0"
edition = "2024"
description = "Bevy Prefabs"
license-file = "LICENSE"
documentation = "https://docs.rs/brefabs/latest/brefabs/"
repository = "https://github.com/GodOfProgramming/brefabs"
publish = true

[dependencies]
bevy_app = "0.17.3"
bevy_asset = "0.17.3"
bevy_ecs = "0.17.3"
bevy_log = "0.17.3"
bevy_platform = "0.17.3"
bevy_reflect = "0.17.3"
bevy_utils = "0.17.3"
derive_more = "2.0.1"
ordermap = "1.0.0"
ron = "0.12.0"
serde = { version = "1.0" }

[dev-dependencies]
bevy = "0.17.3"

[[example]]
name = "simple"
required-features = ["serde/derive"]
